# cr8s

./: Cargo.toml  README.md  docker-compose.yml
migrations/2024-12-08-143946_create_crates/: up.sql
migrations/2024-12-16-175256_create_users/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
src/templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: crates.rs  mod.rs  rustacean.rs
