[package]
name = "cr8s"
default-run = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = [ "json" ] }
rocket_sync_db_pools = { version = "0.1.0", features = [ "diesel_postgres_pool" ] }
diesel = { version = "2.2.6", features = ["postgres", "chrono"] }
serde = { version = "1.0.216", features = [ "derive" ] }
chrono = { version = "0.4.39", features = [ "serde" ] }
clap = "4.5.23"
argon2 = "0.5.3"
rand = "0.8.5"
log = "0.4.22"
tera = "1.20.0"
lettre = "0.11.11"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["deadpool_redis"]

[dev-dependencies]
reqwest = { version = "0.12.9", features = [ "json", "blocking" ] }